--- a/product-details.html
+++ b/product-details.html
@@ -21,7 +21,7 @@
         </div>
   <nav>
       <ul id="MenuItems">  
-        <li><a href="products.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="productspage.html">products</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Contact</a></li>
