--- a/productspage.html
+++ b/productspage.html
@@ -17,11 +17,11 @@
 
     <div class="navbar">
          <div class="logo">
-            <a href="products.html"><img src="images/logo 23.jpeg" width="100px" height="70px"></a>
+            <a href="index.html"><img src="images/logo 23.jpeg" width="100px" height="70px"></a>
         </div>
   <nav>
       <ul id="MenuItems">  
-          <li><a href="products.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="productspage.html">products</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Contact</a></li>
