--- a/product-details.html
+++ b/product-details.html
@@ -17,7 +17,7 @@
 
     <div class="navbar">
          <div class="logo">
-           <img src="images/logo 23.jpeg" width="100px" height="70px">
+             <a href="index.html"><img src="images/logo 23.jpeg" width="100px" height="70px"></a>
         </div>
   <nav>
       <ul id="MenuItems">  
